--- a/game.html
+++ b/game.html
@@ -5,10 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link href="assets/css/style.css" rel="stylesheet">    
-  <title>PokeBattle</title>
+  <title>Pokebattler</title>
 </head>
 <body>
-  <div class="background"><!-- have to call background in this manner due to rendering issues otherwise -->
   <div class="d-flex flex-column min-vh-100">
     <header class="header" id="logo-header">
       <a href="index.html"><img src="assets/images/pokebattler-logo-large.webp" alt="PokeBattler" class="logo"></a>
@@ -34,12 +33,12 @@
     </main>
     <footer class="footer">
       <!-- footer content  -->  
-      <p class="footer-links"> 
-        <a href="https://github.com/monkphin" target="_blank" rel="noopener" aria-label="Github (Opens in a new Tab)" class="fa-logo"><i class="fa-brands fa-github"></i></a> 
-        <a href="https://www.facebook.com/owbur?" target="_blank" rel="noopener" aria-label="Facebook (Opens in a new Tab)" class="fa-logo"><i class="fa-brands fa-facebook"></i></a> 
-        <a href="https://x.com/monkphin" target="_blank" rel="noopener" aria-label="Twitter (Opens in a new Tab)" class="fa-logo"><i class="fa-brands fa-twitter"></i></a> 
-        <a href="https://www.linkedin.com/in/darren-b-aa1717a/" target="_blank" rel="noopener" aria-label="LinkedIn (Opens in a new Tab)" class="fa-logo"><i class="fa-brands fa-linkedin"></i></a> 
-      </p>
+      <ul class="footer-links"> 
+        <li><a href="https://github.com/monkphin" target="_blank" rel="noopener" aria-label="Github (Opens in a new Tab)" class="fa-logo"><i class="fa-brands fa-github"></i></a></li>
+        <li><a href="https://www.facebook.com/owbur?" target="_blank" rel="noopener" aria-label="Facebook (Opens in a new Tab)" class="fa-logo"><i class="fa-brands fa-facebook"></i></a></li>
+        <li><a href="https://x.com/monkphin" target="_blank" rel="noopener" aria-label="Twitter (Opens in a new Tab)" class="fa-logo"><i class="fa-brands fa-twitter"></i></a></li>
+        <li><a href="https://www.linkedin.com/in/darren-b-aa1717a/" target="_blank" rel="noopener" aria-label="LinkedIn (Opens in a new Tab)" class="fa-logo"><i class="fa-brands fa-linkedin"></i></a></li>
+      </ul>
     </footer>
   </div>
 </div>
